--- a/src/components/Page/Page.css
+++ b/src/components/Page/Page.css
@@ -1,6 +1,8 @@
 .Page {
-  display: flex;
+  display: inline-flex;
   flex-direction: column;
-  width: 100%;
-  scroll-snap-align: center;
+  min-width: 100%;
+  height: 100vh;
+  scroll-snap-align: start;
+  justify-content: center;
 }
