--- a/src/index.css
+++ b/src/index.css
@@ -10,5 +10,4 @@ body {
 
 html {
   font-family: "Local Times", "Times New Roman", "Times", serif;
-  scroll-snap-type: x mandatory;
 }
